# dejavuii

./: .dir-locals.el  .gitignore  CMakeLists.txt  README.md  pipeline.sh  plan.md  setup.sh
analysis/: folder-clones.Rmd  folder_clone_originals.Rmd  folder_clones_histories.Rmd  folder_clones_summary.Rmd  helpers.R  join.Rmd  join.nb.html  npm-filter.Rmd  npm-filter.nb.html  npm-summary.Rmd  npm-summary.nb.html  overview.Rmd  verify.Rmd  verify.nb.html
data/: join-summary.csv
docs/: commands.md  ideas.md  peta.nb.html  peta.rmd  plan.md  schema.md
helpers/: commands.h  csv-reader.h  hash.h  helpers.h  sectioned-text-file-reader.h  settings.h  strings.h
scripts/: empty-projects-in-commit-history.awk
src/: CommitOrder.cpp  CommitOrder.h  README.md  TimestampReader.cpp  TimestampReader.h  commands.h  commit-order.cpp  commit-order.h  commit_iterator.h  loaders.cpp  loaders.h  main.cpp  objects.cpp  objects.h  settings.h  timestamp-reader.cpp  timestamp-reader.h
src/active-projects/: active-projects.cpp  active-projects.h
src/clones/: clones.cpp  clones.h  clones2.cpp  clones2.h
src/commands/: #folder_clones_histories.cpp#  .#folder_clones_histories.cpp  active-projects-summary.cpp  active-projects-years.cpp  active_projects_weeks.cpp  all-commits-summary.cpp  clones.cpp  clones_over_time.cpp  collect-metadata.cpp  detect-file-clones.cpp  detect-folder-clones.cpp  detect-forks.cpp  detect-old-projects.cpp  download-contents.cpp  download-repo-info.cpp  (+38 more)
tools/: verifier_output_analyzer.Rmd  verifier_output_analyzer.nb.html
verifier/: verifier_output_analyzer.Rmd  verifier_output_analyzer.nb.html
(+37 files in other folders)
